--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2768,7 +2768,7 @@ input, select, textarea {
 					-ms-flex-shrink: 1;
 					flex-shrink: 1;
 					padding: 1rem 0 0 0;
-					text-align: center;
+					text-align: left;
 					width: 100%;
 				}
 
