--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2821,7 +2821,7 @@ input, select, textarea {
 				height: 2.25rem;
 				line-height: 2.25rem;
 				display: inline-block;
-				text-align: center;
+				text-align: left;
 				border-radius: 100%;
 				font-size: 1.25rem;
 			}
